--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
  <header>
      <h1>INFO2180 Lab 1</h1>
-     <p>This is a simple webpage for Lab 1 of INFO2180p.</p>
+     <p>This is a simple webpage for Lab 1 of INFO2180.</p>
  </header>
  <main>
  <h2>[Your Name]</h2>
