--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=devicewidth, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -12,8 +13,10 @@
      <p>This is a simple webpage for Lab 1 of INFO2180.</p>
  </header>
  <main>
- <h2>[Your Name]</h2>
- <p>[Paragraph about myself]</p>
+ <h2>Ahmal Chambers</h2>
+ <p>My name is Ahmal Chambers. I am 20 years old and a second year student at UWI. 
+    I enjoy listening to music and playing instruments. I am interested in this course 
+ </p>
  </main>
  <footer>
  <p>Copyright &copy; 2020 <Your Name>.</p>
