puppy image do and ting

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
  <p>My name is Ahmal Chambers. I am 20 years old and a second year student at UWI. 
     I enjoy listening to music and playing instruments. I am interested in this course 
  </p>
+ <img src="puppy.jpeg" alt="image of a puppy">
+ 
  </main>
  <footer>
  <p>Copyright &copy; 2020 <Your Name>.</p>
