--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
  <main>
  <h2>Ahmal Chambers</h2>
  <p>My name is Ahmal Chambers. I am 20 years old and a second year student at UWI. 
-    I enjoy listening to music and playing instruments. I am interested in this course 
+    I enjoy listening to music and playing instruments. I am interested in this course because I learned
+    HTML and CSS a few months ago and I'd like to continue learning more content regarding web development and possibly 
+    pursuing it as a profession in the future.
  </p>
  <img src="puppy.jpeg" alt="image of a puppy">
  
